// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusItem should render an approved status with substatus and comments correctly 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-approved"
      >
        Approved
      </div>
    </div>
    <div
      class="item-substatus-text"
    >
      Approval letter sent
    </div>
    <div
      class="status-item-text"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
    </div>
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly when no comment or substatus provided 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-approved"
      >
        Approved
      </div>
    </div>
    <div
      class="status-item-text"
    />
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly when no comment provided 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-approved"
      >
        Approved
      </div>
    </div>
    <div
      class="item-substatus-text"
    >
      Approval letter sent
    </div>
    <div
      class="status-item-text"
    />
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly when no substatus provided 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-approved"
      >
        Approved
      </div>
    </div>
    <div
      class="status-item-text"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
    </div>
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly with Appealed status 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-appealed"
      >
        Appealed
      </div>
    </div>
    <div
      class="status-item-text"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
    </div>
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly with Disqualified status 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-disqualified"
      >
        Disqualified
      </div>
    </div>
    <div
      class="status-item-text"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
    </div>
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly with Lease Signed status 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-leased"
      >
        Lease Signed
      </div>
    </div>
    <div
      class="status-item-text"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
    </div>
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly with Processing status 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-processing"
      >
        Processing
      </div>
    </div>
    <div
      class="status-item-text"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
    </div>
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusItem should render properly with withdrawn status 1`] = `
<DocumentFragment>
  <div
    class="status-item"
    data-testid="status-item"
  >
    <div
      class="status-item-header"
    >
      <div
        class="status-pill is-withdrawn"
      >
        Withdrawn
      </div>
    </div>
    <div
      class="status-item-text"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
    </div>
    <div
      class="status-item-footer"
    >
      <div
        class="status-item-created-by"
      />
      <div
        class="status-item-date"
      >
        Aug 25, 2020 1:00 PM PDT
      </div>
    </div>
  </div>
</DocumentFragment>
`;
